hphp/hack/test/typecheck/lambda/lambda_bad_arity2.php.exp
File "lambda_bad_arity2.php", line 15, characters 7-80:
Too many arguments (expected 2 but got 3) (Typing[4105])
File "lambda_bad_arity2.php", line 6, characters 5-32:
Definition is here
